src/qt/res/css/dark.css
/* ... */
QToolBar > QToolButton:checked {
border: 0;
font-weight: bold;
}

QToolBar > QToolButton:disabled {
color: #444;
}

QToolBar > QLabel {
border: 0;
margin:10px 0 0 0;
}

QMessageBox {
background-color: #555;
}

/*******************************************************/

QLabel { /* Base Text Size & Color */
font-size:12px;
color: #ccc;
}

.QCheckBox { /* Checkbox Labels */
color: #ccc;
background-color:transparent;
}

.QCheckBox:hover {
background-color:transparent;
}

.QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
border: 1px solid #1c75bc;
font-size:11px;
min-height:31px;
outline:0;
padding: 0px 3px 0px 3px;
background-color: #333;
color: #aaa;
}

.QLineEdit:!focus {
font-size:12px;
}

.QValidatedLineEdit:disabled, .QLineEdit:disabled {
background-color: #3e3e3e;
}

.QRadioButton {
color: #aaa;
background-color:transparent;
}

.QRadioButton:checked {
color: #ccc;
background-color:transparent;
}

QWidget { /* override text selection background color for all text widgets */
selection-background-color: #999;
}

/*******************************************************/

QPushButton { /* Global Button Style */
background-color: #1c75bc;
border: 0;
border-radius:8px;
color:#ffffff;
font-size:12px;
font-weight:normal;
height: 26px;
padding-left:25px;
padding-right:25px;
padding-top:5px;
padding-bottom:5px;
}

QPushButton:hover {
background-color: #005c96; /* aka Dark Blue */
}

QPushButton:focus {
border:none;
outline:none;
}

QPushButton:pressed {
border: 1px solid #444;
}

QPushButton:disabled {
background-color: #666;
}

QComboBox { /* Dropdown Menus */
border: 1px solid #1c75bc;
padding: 0px 5px 0px 5px;
background: #333;
min-height:31px;
color: #aaa;
}

QComboBox:checked {
background: #3e3e3e;
}

QComboBox:editable {
background: #1c75bc;
color:#616161;
border:0px solid transparent;
}

QComboBox::drop-down {
width:25px;
border:0px;
}

QComboBox::down-arrow {
border-image: url(':/images/arrow_down') 0 0 0 0 stretch stretch;
}

QComboBox QListView {
color: #aaa;
background: #555;
padding: 3px;
}

QComboBox QAbstractItemView::item { margin:4px; }

QComboBox::item {
color: #aaa;
}

QComboBox::item:alternate {
background:#444;
}

QComboBox::item:selected {
border:0px solid transparent;
background: #666;
color: #ccc;
}

QComboBox::indicator {
background-color:transparent;
selection-background-color:transparent;
color:transparent;
selection-color:transparent;
}

QAbstractSpinBox {
border: 1px solid #1c75bc;
padding: 0px 5px 0px 5px;
background: #333;
min-height:31px;
color: #aaa;
}

QAbstractSpinBox::up-button {
subcontrol-origin: border;
subcontrol-position: top right;
width:21px;
background: #333;
border-left:0px;
border-right: 1px solid #1c75bc;
border-top: 1px solid #1c75bc;
border-bottom:0px;
padding-right:1px;
padding-left:5px;
padding-top:2px;
}

QAbstractSpinBox::up-arrow {
image:url(':/images/arrow_up_small');
}

QAbstractSpinBox::down-button {
subcontrol-origin: border;
subcontrol-position: bottom right;
width:21px;
background: #333;
border-top:0px;
border-left:0px;
border-right: 1px solid #1c75bc;
border-bottom: 1px solid #1c75bc;
padding-right:1px;
padding-left:5px;
padding-bottom:2px;
}

QAbstractSpinBox::down-arrow {
image:url(':/images/arrow_down_small');
}

QCheckBox {
spacing: 5px;
}

QCheckBox::indicator {
width: 16px;
height: 16px;
}

QCheckBox::indicator:unchecked {
image:url(':/images/unchecked');
}

QCheckBox::indicator:unchecked:hover {
image:url(':/images/unchecked');
}

QCheckBox::indicator:unchecked:pressed {
image:url(':/images/checked');
}

QCheckBox::indicator:checked {
image:url(':/images/checked');
}

QCheckBox::indicator:checked:hover {
image:url(':/images/checked');
}

QCheckBox::indicator:checked:pressed {
image:url(':/images/unchecked');
}

QCheckBox::indicator:indeterminate:hover {
image:url(':/images/unchecked');
}

QCheckBox::indicator:indeterminate:pressed {
image:url(':/images/checked');
}

/*******************************************************/

QHeaderView { /* Table Header */
background-color:transparent;
}

QHeaderView::section { /* Table Header Sections */
qproperty-alignment:center;
background-color: #1c75bc;
color: #ccc;
min-height:25px;
font-weight:bold;
font-size:11px;
outline:0;
border: 0px solid #ccc;
border-right: 1px solid #ccc;
padding-left:5px;
padding-right:5px;
padding-top:2px;
padding-bottom:2px;
}

QHeaderView::section:last {
border-right: 0px solid #333;
}

.QScrollArea {
background:transparent;
border:0px;
}

.QTableView { /* Table - has to be selected as a class otherwise it throws off QCalendarWidget */
border: 0px solid #444;
background-color: #333;
}

QTableView::item { /* Table Item */
background-color: #333;
/*color: #aaa;*/ /* Do not do this!!! This breaks tx format from transactiontablemodel.cpp, apply to individual tables instead */
font-size:12px;
}

QTableView::item:selected { /* Table Item Selected */
background-color: #555;
color: #ccc;
}

.QTableWidget {
border: 0px solid #444;
background-color: #333;
}

/* Do NOT apply any styles to QScrollBar here,
 * it's OS dependent and should be handled via platform specific code.
*/

/*******************************************************/

.QTabWidget {
border-bottom: 1px solid #444;
}

.QTabWidget::pane {
border: 1px solid #333;
background-color: #444;
}

.QTabWidget QTabBar::tab {
background-color: #ccc;
color: #444;
padding-left:10px;
padding-right:10px;
padding-top:5px;
padding-bottom:5px;
border-top: 1px solid #333;
}

.QTabWidget QTabBar::tab:first {
border-left: 1px solid #333;
}

.QTabWidget QTabBar::tab:last {
border-right: 1px solid #333;
}

.QTabWidget QTabBar::tab:selected{
background-color: #444;
color: #ccc;
}

.QTabWidget QTabBar::tab:hover {
background-color: #555;
color: #ccc;
}

.QTabWidget .QWidget {
color: #444;
}

.QTabWidget .QWidget QAbstractSpinBox {
}

.QTabWidget .QWidget QAbstractSpinBox::down-button {
}

.QTabWidget .QWidget QAbstractSpinBox::up-button {
}

.QTabWidget .QWidget QComboBox {
}
/* ... */

